Added unit tests for the ProductService class